# SPEKTR

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
audit/: avalanche_report.txt  dieharder_report.txt  ent_report.txt
docs/: SPEC_EN  SPEC_RU  SPEC_RU.md
src/: integrations.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permission/: lib.toml
src-tauri/src/: main.rs
ui/: index.html
