[package]
name = "spektr"
version = "1.0.0"
edition = "2024"

[dependencies]
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
rayon = "1.8.0"
rand_core = { version = "0.6.4", features = ["std"] }
argon2 = "0.5.2"
hmac = "0.12.1"
sha2 = "0.10.8"
machine-uid = "0.3.0"
pqc_kyber = { version = "0.7.0", features = ["kyber1024"] }
hex = "0.4.3"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1.0"
indicatif = "0.17.7"
obfstr = "0.4.3"
sysinfo = "0.30.12"
lazy_static = "1.4"

[[bin]]
name = "spektr"
path = "src/main.rs"

[[bin]]
name = "nist_dump"
path = "src/bin/nist_dump.rs"

[[bin]]
name = "avalanche"
path = "src/bin/avalanche.rs"

